# quadratic-equation-solver

./: .gitignore  CMakeLists.txt  README.md  README.md.txt  main.cpp
include/: big_number.h  expression.h  interpreter.h  quadratic_solver.h
src/: big_number.cpp  expression.cpp  interpreter.cpp  quadratic_solver.cpp
tests/: test_quadratic.cpp
